--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: "0 8 * * *"  # каждый день в 12:00 UTC
+    - cron: "0 8 * * *"  # каждый день в 11:00 по МСК (8:00 UTC)
   workflow_dispatch:
 
 jobs:
@@ -10,14 +10,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.MY_PAT }}   # ← Важно!
 
-    - name: Make a commit
-      run: |
-        echo "$(date)" >> log.txt
-        git config --global user.email "dm.2909@mail.ru"
-        git config --global user.name "louvredprod"
-        git add .
-        git commit -m "Daily update"
-        git push
+      - name: Set up Git
+        run: |
+          git config --global user.email "dm.2909@mail.ru"
+          git config --global user.name "louvredprod"
+
+      - name: Make a commit
+        run: |
+          echo "$(date)" >> log.txt
+          git add log.txt
+          git commit -m "Daily update" || echo "Nothing to commit"
+          git push
